style.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');

:root{
    --SoftRed: hsl(10, 79%, 65%);
    --SoftRedLight: hsl(10, 79%, 65%, 0.70);
    --Cyan: hsl(186, 34%, 60%);
    --CyanLight: hsl(186, 34%, 60%, 0.50);
    --Darkbrown: hsl(25, 47%, 15%);
    --Medium-Brown: hsl(28, 10%, 53%);
    --Cream: hsl(27, 66%, 92%);
    --VeryPaleOrange: hsl(33, 100%, 98%);
    --White: #fff;
    --Black: #000;
}


*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'DM Sans', sans-serif;
}

body{
    background-color: var(--Cream);
    display: grid;
    place-items: center;
    min-height: 100vh;
}

img{
    max-width: 70%;
}

header,main{
    padding: 1.25rem;
    border-radius: 16px;
}

header{
    background-color: var(--SoftRed);
    color: var(--VeryPaleOrange);
    margin-bottom: 1rem;
}

main{
    background-color: var(--White);
    
}

h2{
    margin-bottom: 0.5rem;
}

p{
    font-size: 0.85rem;
}

main p{
    color: var(--Medium-Brown);
    
}

.container{
    min-width: 350px;
    width: 425px;
}

.flex{
    display: flex;
    gap: 1rem;
}

.row{
    flex-direction: row;
    justify-content: space-between;
}

.align-center{
    align-items: center;
}

.column{
    flex-direction: column;
}

.logo{
    text-align: end;
}

.bars{
    align-items: flex-end;
}

.last-month{
    text-align: right;
}
.percent{
    font-weight: bold;
    color: var(--Black);
}

/**
 BARS
*/

.bars{
    border-bottom: 1px solid var(--Cream);
    padding-bottom: 1.33rem;
}

.bars-bar{
    width: 2.5rem;
    height: 50px;
    background-color: var(--SoftRed);
    border-radius: 5px;
    cursor: pointer;
    position: relative;
    margin-top: 1.25rem;
    transition: all 0.15s ease-in-out;
}

.bars-bar:hover{
    background-color: var(--CyanLight);
}

.today:hover{
    background-color: var(--SoftRedLight);
}

.bars-bar:hover::before{
    content: '$'attr(data-expense);
    background-color: var(--Black);
    color: var(--VeryPaleOrange);
    /* padding: 0.33em; */
    border-radius: 5px;
    font-size: 0.80rem;
    margin: 0;
    position: absolute;
    top: -30px;
    left: -25%;
    right: -25%;
    text-align: center;
}


/**
MOBILE
*/

@media screen and (max-width: 575px) {
    .container{
        max-width: 350px;
    }
}


/**
ADDITIONAL
*/

ul{
    list-style-type: none;
   
}

li{
    position: relative;
    color: var(--Medium-Brown);
    font-size: 0.80rem;
    text-align: center;
    line-height: 26px;
}

